css basic styles added

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href= "style.css">
     <title> Hibram Sanchez Garcia's Portfolio </title>
 </head>
-
+ 
 <body>
      <!-- Header and navigation tags -->
  <section class="header">
@@ -40,56 +40,55 @@
   <!-- End Navigation-->
 
   <!--  About Me an section-->
-<section class="#About-Me">
+<section class="About-Me">
         <h2> About Me </h2>
     <div> 
         <p>
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, libero odit architecto, totam expedita illum similique porro voluptas pariatur laborum molestias repudiandae vel tempore nobis id omnis eveniet facilis deleniti!
-        </p>
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus aliquam doloribus, soluta fuga ad sequi odio excepturi qui corrupti magni hic ut esse, facilis vel voluptate! Dolorem porro velit maxime?
+        </p><br/>
+
         <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta nostrum laudantium magnam pariatur minus dolorum provident sed debitis. Porro aspernatur ipsam labore sunt, alias minus esse fugiat nam deserunt rerum?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, totam? Tempora, quos ipsam obcaecati sit voluptas culpa, quia consequuntur nihil nulla, a laudantium. Minus magni aliquid ut consequatur exercitationem! Dignissimos.
         </p>
     </div>
 </section>
 
 <!-- Work and Applications section-->
-<section class="#Work">
- <div class="App.1">
-        <h2> WORK </h2>
-    <div>
+<section class="Work">
+    <h2> WORK </h2>
+ <div class="applications">  
+
+    <div class="App.1">
         <img src="" alt="">
         <h3> App 1 </h3>
         <h4> Sub Heading </h4>
     </div>
- </div>
 
  <div class="App.2">
         <img src="" alt="">
-    <div>
         <h3> App 2 </h3>
         <h4> Sub Heading </h4>
-    </div>
  </div>
 
  <div class="App.3">
         <img src="" alt="">
-    <div>
         <h3> App 3</h3>
         <h4> Sub Heading </h4>
-    </div>
  </div>
 
- <div class="App.4">
+  <div class="App.4">
         <img src="" alt="">
-    <div>
         <h3> App 4 </h3>
         <h4> Sub Heading </h4>
-    </div>
+  </div>
  </div>
+
 </section>
 
 <!-- Contact Me section-->
-<section class="#Contact-Me">
+<section class="Contact-Me">
     <div>
         <h2> Contact Me </h2>
 <!-- Links to email, github, social medias-->
