Css styling to header and about me added

--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href= "style.css">
+    <link rel="stylesheet" href="assets\css\style.css">
     <title> Hibram Sanchez Garcia's Portfolio </title>
 </head>
  
 <body>
      <!-- Header and navigation tags -->
- <section class="header">
-    <header> 
+ <header class="header"> 
+    <div class="head-title">
      <h1>
-     <a href="/"> Hibram Sanchez's Portfolio </a>
+     <a href="/"> Portfolio </a>
      </h1>
+    </div>
   
-    <nav>
+    <nav class="header-nav">
       <ul>
        <li>
         <a href="#About-Me">About Me</a>
@@ -34,15 +35,18 @@
         <a href="#Resume">Resume</a>
        </li>
       </ul>
-    </nav>
+    </nav><br/>
+
    </header> 
-  </section>
   <!-- End Navigation-->
 
-  <!--  About Me an section-->
+  <!--  About Me section-->
 <section class="About-Me">
+    <div clas="about-me-header">
         <h2> About Me </h2>
-    <div> 
+    </div>
+
+    <div class="about-me-p">
         <p>
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, libero odit architecto, totam expedita illum similique porro voluptas pariatur laborum molestias repudiandae vel tempore nobis id omnis eveniet facilis deleniti!
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus aliquam doloribus, soluta fuga ad sequi odio excepturi qui corrupti magni hic ut esse, facilis vel voluptate! Dolorem porro velit maxime?
