Css flexboxes and placeholder images added

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <!--  About Me section-->
 <section class="About-Me">
-    <div clas="about-me-header">
+    <div class="about-me-header">
         <h2> About Me </h2>
     </div>
 
@@ -60,48 +60,71 @@
 </section>
 
 <!-- Work and Applications section-->
-<section class="Work">
-    <h2> WORK </h2>
- <div class="applications">  
-
-    <div class="App.1">
-        <img src="" alt="">
-        <h3> App 1 </h3>
-        <h4> Sub Heading </h4>
+<section class="work">
+    <div class="work-header">
+     <h2> Work </h2>
     </div>
 
- <div class="App.2">
-        <img src="" alt="">
-        <h3> App 2 </h3>
-        <h4> Sub Heading </h4>
- </div>
+    <!-- apps for work section-->
+<div class="app-section-layout">
+    <div class="row">
+    <!--Largest image-->
+        <div class="column">
+          <a href=" ">
+          <img src="images\run-buddy pic.png" alt="run-buddy" style="width:100%">
+        </div>
+    </div>
 
- <div class="App.3">
-        <img src="" alt="">
-        <h3> App 3</h3>
-        <h4> Sub Heading </h4>
- </div>
+<!-- 2nd and 3rd/ 2nd tier-->
+    <div class="row">
+        <div class="column">
+          <a href=" ">
+          <img src="images\run-buddy pic.png" alt="pic2" style="width:100%">
+        </div>
 
-  <div class="App.4">
-        <img src="" alt="">
-        <h3> App 4 </h3>
-        <h4> Sub Heading </h4>
-  </div>
- </div>
+        <div class="column">
+          <a href=" ">
+          <img src="images\run-buddy pic.png" alt="pic3" style="width:100%">
+        </div>
+    </div>
+<!-- 4th and 5th/3rd tier-->
+    <div class="row">
+        <div class="column">
+            <a href=" ">
+            <img src="images\run-buddy pic.png" alt="pic3" style="width:100%">
+          </div>
 
+          <div class="column">
+            <a href=" ">
+            <img src="images\run-buddy pic.png" alt="pic3" style="width:100%">
+          </div>
+        </div>
+    </div>
+</div>
 </section>
 
 <!-- Contact Me section-->
 <section class="Contact-Me">
-    <div>
+    <div class="contact-me-header">
         <h2> Contact Me </h2>
+    </div>
 <!-- Links to email, github, social medias-->
-        <p> 520-789-8385 </p>
-        <email> hibramsanchezleugim@gmail.com </email><br/>
-
-        <a href="#"> GitHub </a><br/>
-        <a href=" #"> Twitter </a>
+    <div class="contact-me-info">
+        <ul>
+            <li>
+             520.789.8385 
+            </li>
+           
+            <li>
+                <a href="mailto: hibramsanchezleugim@gmail.com">hibramsanchezleugim@gmail.com</a>
+            </li>
+           
+            <li>
+                <a href="https://github.com/Hibram007">GitHub</a>
+            </li>
+        </ul>
     </div>
 </section>
+
 </body>
 </html>
