Contact me section added

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, totam? Tempora, quos ipsam obcaecati sit voluptas culpa, quia consequuntur nihil nulla, a laudantium. Minus magni aliquid ut consequatur exercitationem! Dignissimos.
         </p>
     </div>
-</section>
+</section><br>
 
 <!-- Work and Applications section-->
 <section class="work">
@@ -79,50 +79,58 @@
     <div class="row">
         <div class="column">
           <a href=" ">
-          <img src="images\run-buddy pic.png" alt="pic2" style="width:100%">
+          <img src="images\Horiseon pic.png" alt="pic2" style="width:100%">
         </div>
 
         <div class="column">
           <a href=" ">
-          <img src="images\run-buddy pic.png" alt="pic3" style="width:100%">
+          <img src="images\app 3.jpg" alt="pic3" style="width:100%">
         </div>
     </div>
 <!-- 4th and 5th/3rd tier-->
     <div class="row">
         <div class="column">
             <a href=" ">
-            <img src="images\run-buddy pic.png" alt="pic3" style="width:100%">
+            <img src="images\app 4.jpg" alt="pic3" style="width:100%">
           </div>
 
           <div class="column">
             <a href=" ">
-            <img src="images\run-buddy pic.png" alt="pic3" style="width:100%">
+            <img src="images\app 5.jpg" alt="pic3" style="width:100%">
           </div>
         </div>
     </div>
 </div>
-</section>
+</section><br>
 
 <!-- Contact Me section-->
 <section class="Contact-Me">
+
     <div class="contact-me-header">
         <h2> Contact Me </h2>
     </div>
 <!-- Links to email, github, social medias-->
     <div class="contact-me-info">
-        <ul>
-            <li>
-             520.789.8385 
-            </li>
-           
-            <li>
-                <a href="mailto: hibramsanchezleugim@gmail.com">hibramsanchezleugim@gmail.com</a>
-            </li>
-           
-            <li>
-                <a href="https://github.com/Hibram007">GitHub</a>
-            </li>
-        </ul>
+        <div class="a-elements">
+            <a href="tel:123-456-7890">555.555.555</a>
+        </div>
+
+        <div class="a-elements">
+           <a href="mailto: hibramsanchezleugim@gmail.com">hibramsanchezleugim@gmail.com</a>
+        </div>
+
+        <div class="a-elements">
+           <a href="https://github.com/Hibram007">GitHub</a>
+        </div>
+
+        <div class="a-elements">
+           <a href="https://twitter.com/?lang=en"> Twitter</a>
+        </div>
+
+        <div class="a-elements">
+           <a href="https://www.spotify.com/us/"> Spotify</a>
+        </div>     
+    </div>
     </div>
 </section>
 
