--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class="column">
           <a href=" ">
-          <img src="images\app 3.jpg" alt="pic3" style="width:100%">
+          <img src="images\Daily moods oic.PNG" alt="pic3" style="width:100%">
         </div>
     </div>
 <!-- 4th and 5th/3rd tier-->
